fix: json and wikitable view stretches too far
they shouldn't stretch too far when their content is long

--- a/Styles/json-viewer.css
+++ b/Styles/json-viewer.css
@@ -9,6 +9,7 @@
 .json-viewer {
     color: #afafaf;
     padding-left: 20px;
+    text-wrap: auto;
 }
 
 .json-viewer ul {
